--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
       <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
       <coverage.haltOnFailure>true</coverage.haltOnFailure>
       <coverage.instructionCoveredRatioMinimum>0.80</coverage.instructionCoveredRatioMinimum>
+      <coverage.classCoveredRatioMinimum>0.95</coverage.classCoveredRatioMinimum>
    </properties>
 
    <dependencyManagement>
@@ -210,6 +211,11 @@
                                  <counter>INSTRUCTION</counter>
                                  <value>COVEREDRATIO</value>
                                  <minimum>${coverage.instructionCoveredRatioMinimum}</minimum>
+                              </limit>
+                              <limit>
+                                 <counter>CLASS</counter>
+                                 <value>COVEREDRATIO</value>
+                                 <minimum>${coverage.classCoveredRatioMinimum}</minimum>
                               </limit>
                            </limits>
                         </rule>
