initial checkin of quicksight dashboard widget POC, updated to remove hard coded credentials

--- a/qqq-sample-project/pom.xml
+++ b/qqq-sample-project/pom.xml
@@ -128,9 +128,9 @@
             <version>4.10.0</version>
             <configuration>
                <propertyFile>/src/main/resources/liquibase/liquibase.properties</propertyFile>
-               <url>${env.LB_DB_URL}</url>
-               <username>${env.LB_DB_USERNAME}</username>
-               <password>${env.LB_DB_PASSWORD}</password>
+               <url>${env.RDBMS_URL}</url>
+               <username>${env.RDBMS_USERNAME}</username>
+               <password>${env.RDBMS_PASSWORD}</password>
                <contexts>${env.LB_CONTEXTS}</contexts>
             </configuration>
          </plugin>
