--- a/qqq-backend-core/pom.xml
+++ b/qqq-backend-core/pom.xml
@@ -36,11 +36,26 @@
       <!-- noe at this time -->
    </properties>
 
+   <dependencyManagement>
+      <dependencies>
+         <dependency>
+            <groupId>software.amazon.awssdk</groupId>
+            <artifactId>bom</artifactId>
+            <version>2.17.259</version>
+            <type>pom</type>
+            <scope>import</scope>
+         </dependency>
+      </dependencies>
+   </dependencyManagement>
    <dependencies>
       <!-- other qqq modules deps -->
       <!-- none, this is core.  -->
 
       <!-- 3rd party deps specifically for this module -->
+      <dependency>
+         <groupId>software.amazon.awssdk</groupId>
+         <artifactId>quicksight</artifactId>
+      </dependency>
       <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
