--- a/qqq-backend-module-api/pom.xml
+++ b/qqq-backend-module-api/pom.xml
@@ -23,7 +23,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
-   <artifactId>qqq-backend-module-rdbms</artifactId>
+   <artifactId>qqq-backend-module-api</artifactId>
 
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
@@ -43,20 +43,6 @@
          <artifactId>qqq-backend-core</artifactId>
          <version>${revision}</version>
       </dependency>
-
-      <!-- 3rd party deps specifically for this module -->
-      <dependency>
-         <groupId>mysql</groupId>
-         <artifactId>mysql-connector-java</artifactId>
-         <version>8.0.30</version>
-      </dependency>
-      <dependency>
-         <groupId>com.h2database</groupId>
-         <artifactId>h2</artifactId>
-         <version>2.1.214</version>
-         <scope>test</scope>
-      </dependency>
-
 
       <!-- Common deps for all qqq modules -->
       <dependency>
@@ -82,5 +68,19 @@
          <scope>test</scope>
       </dependency>
    </dependencies>
+
+   <build>
+      <plugins>
+         <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <configuration>
+               <excludes>
+                  <exclude>com/kingsrook/qqq/backend/module/api/model/**/*.class</exclude>
+               </excludes>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
 
 </project>
