--- a/qqq-middleware-lambda/pom.xml
+++ b/qqq-middleware-lambda/pom.xml
@@ -33,7 +33,10 @@
 
    <properties>
       <!-- props specifically to this module -->
-      <!-- <maven.compiler.release>11</maven.compiler.release> -->
+
+      <!-- todo - remove these!! -->
+      <coverage.instructionCoveredRatioMinimum>0.10</coverage.instructionCoveredRatioMinimum>
+      <coverage.classCoveredRatioMinimum>0.10</coverage.classCoveredRatioMinimum>
    </properties>
 
    <dependencies>
@@ -115,11 +118,6 @@
                      <artifact>*:*</artifact>
                      <excludes>
                         <exclude>META-INF/*</exclude>
-                        <!--
-                        <exclude>META-INF/*.SF</exclude>
-                        <exclude>META-INF/*.DSA</exclude>
-                        <exclude>META-INF/*.RSA</exclude>
-                        -->
                      </excludes>
                   </filter>
                </filters>
@@ -133,65 +131,6 @@
                </execution>
             </executions>
          </plugin>
-
-         <plugin>
-            <groupId>com.github.seanroy</groupId>
-            <artifactId>lambda-maven-plugin</artifactId>
-            <version>2.3.4</version>
-            <configuration>
-               <functionCode>qqq-middleware-lambda/target/qqq-middleware-lambda-0.6.0-SNAPSHOT.jar</functionCode>
-               <version>LATEST</version>
-               <!-- <functionNameSuffix>-${deploymentMode}</functionNameSuffix> -->
-               <!-- <lambdaRoleArn>arn:aws:iam::554535133883:role/infoplus-lambda-execution-role</lambdaRoleArn> -->
-               <region>us-east-1</region> <!-- todo - nf in 2 -->
-               <!-- <vpcSecurityGroupIds>sg-1073a47f,sg-ba1290df</vpcSecurityGroupIds> -->
-               <!-- <vpcSubnetIds>subnet-9b8d0ef4</vpcSubnetIds> -->
-               <s3Bucket>nutrifresh-dkelkhoff-test-bucket</s3Bucket>
-               <publish>true</publish>
-               <forceUpdate>true</forceUpdate>
-               <lambdaFunctionsJSON>
-                  [
-                     {
-                        "functionName": "anotherLambda-from-pom",
-                        "description": "TODO",
-                        "handler": "com.kingsrook.qqq.lambda.AnotherHandler::handleRequest",
-                        "timeout": 1000,
-                        "memorySize": 512,
-                        "keepAlive": 5,
-                        "environmentVariables": { "DEPLOYMENT_MODE": "test" }
-                     }
-                  ]
-               </lambdaFunctionsJSON>
-            </configuration>
-            <dependencies>
-               <dependency>
-                  <groupId>javax.xml.bind</groupId>
-                  <artifactId>jaxb-api</artifactId>
-                  <version>2.3.0</version>
-               </dependency>
-               <dependency>
-                  <groupId>com.sun.xml.bind</groupId>
-                  <artifactId>jaxb-core</artifactId>
-                  <version>2.3.0</version>
-               </dependency>
-               <dependency>
-                  <groupId>com.sun.xml.bind</groupId>
-                  <artifactId>jaxb-impl</artifactId>
-                  <version>2.3.0</version>
-               </dependency>
-               <dependency>
-                  <groupId>javax.activation</groupId>
-                  <artifactId>javax.activation-api</artifactId>
-                  <version>1.2.0</version>
-               </dependency>
-               <dependency>
-                  <groupId>commons-codec</groupId>
-                  <artifactId>commons-codec</artifactId>
-                  <version>1.11</version>
-               </dependency>
-            </dependencies>
-         </plugin>
-
       </plugins>
    </build>
 
