--- a/qqq-backend-module-rdbms/pom.xml
+++ b/qqq-backend-module-rdbms/pom.xml
@@ -102,7 +102,7 @@
             </configuration>
             <executions>
                <execution>
-                  <phase>package</phase>
+                  <phase>${plugin.shade.phase}</phase>
                   <goals>
                      <goal>shade</goal>
                   </goals>
