--- a/qqq-middleware-lambda/pom.xml
+++ b/qqq-middleware-lambda/pom.xml
@@ -124,7 +124,7 @@
             </configuration>
             <executions>
                <execution>
-                  <phase>package</phase>
+                  <phase>${plugin.shade.phase}</phase>
                   <goals>
                      <goal>shade</goal>
                   </goals>
