--- a/qqq-utility-lambdas/pom.xml
+++ b/qqq-utility-lambdas/pom.xml
@@ -23,92 +23,36 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
-   <groupId>com.kingsrook.qqq</groupId>
-   <artifactId>qqq-parent-project</artifactId>
-   <version>${revision}</version>
-   <packaging>pom</packaging>
+   <artifactId>qqq-utility-lambdas</artifactId>
 
-   <modules>
-      <module>qqq-backend-core</module>
-      <module>qqq-backend-module-api</module>
-      <module>qqq-backend-module-filesystem</module>
-      <module>qqq-backend-module-rdbms</module>
-      <module>qqq-middleware-picocli</module>
-      <module>qqq-middleware-javalin</module>
-      <module>qqq-middleware-lambda</module>
-      <module>qqq-utility-lambdas</module>
-      <module>qqq-sample-project</module>
-   </modules>
+   <parent>
+      <groupId>com.kingsrook.qqq</groupId>
+      <artifactId>qqq-parent-project</artifactId>
+      <version>${revision}</version>
+   </parent>
 
    <properties>
-      <revision>0.6.0-SNAPSHOT</revision>
-
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-      <maven.compiler.source>17</maven.compiler.source>
-      <maven.compiler.target>17</maven.compiler.target>
-      <maven.compiler.showDeprecation>true</maven.compiler.showDeprecation>
-      <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
-      <coverage.haltOnFailure>true</coverage.haltOnFailure>
-      <coverage.instructionCoveredRatioMinimum>0.80</coverage.instructionCoveredRatioMinimum>
-      <coverage.classCoveredRatioMinimum>0.95</coverage.classCoveredRatioMinimum>
-      <plugin.shade.phase>none</plugin.shade.phase>
+      <!-- props specifically to this module -->
+      <maven.compiler.source>11</maven.compiler.source>
+      <maven.compiler.target>11</maven.compiler.target>
    </properties>
 
-   <profiles>
-      <profile>
-         <!-- For qqq-middleware-lambda - to build its shaded jar, its qqq dependencies also need
-          to build a shaded jar.  So to activate that mode, use this profile (-P buildShadedJar)-->
-         <id>buildShadedJar</id>
-         <properties>
-            <plugin.shade.phase>package</plugin.shade.phase>
-         </properties>
-      </profile>
-   </profiles>
-
-   <dependencyManagement>
-      <dependencies>
-         <dependency>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-checkstyle-plugin</artifactId>
-            <version>3.1.2</version>
-         </dependency>
-         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.17.1</version>
-         </dependency>
-         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.17.1</version>
-         </dependency>
-         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.8.1</version>
-            <scope>test</scope>
-         </dependency>
-         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-params</artifactId>
-            <version>5.8.1</version>
-            <scope>test</scope>
-         </dependency>
-         <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>3.23.1</version>
-            <scope>test</scope>
-         </dependency>
-      </dependencies>
-   </dependencyManagement>
+   <dependencies>
+      <!-- 3rd party deps specifically for this module -->
+      <dependency>
+         <groupId>com.amazonaws</groupId>
+         <artifactId>aws-lambda-java-core</artifactId>
+         <version>1.2.1</version>
+      </dependency>
+      <dependency>
+         <groupId>com.amazonaws</groupId>
+         <artifactId>aws-java-sdk-sqs</artifactId>
+         <version>1.12.321</version>
+      </dependency>
+   </dependencies>
 
    <build>
       <plugins>
-         <!-- plugins specifically for this module -->
-         <!-- none at this time -->
-
          <!-- Common plugins for all qqq modules -->
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -127,6 +71,7 @@
                <argLine>@{jaCoCoArgLine}</argLine>
             </configuration>
          </plugin>
+         <!--
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-checkstyle-plugin</artifactId>
@@ -145,14 +90,12 @@
                   <configuration>
                      <configLocation>checkstyle/config.xml</configLocation>
                      <headerLocation>checkstyle/license.txt</headerLocation>
-                     <!-- <suppressionsLocation>checkstyle-suppressions.xml</suppressionsLocation> -->
                      <encoding>UTF-8</encoding>
                      <consoleOutput>true</consoleOutput>
                      <failsOnError>false</failsOnError>
                      <failOnViolation>true</failOnViolation>
                      <violationSeverity>warning</violationSeverity>
                      <excludes>**/target/generated-sources/*.*</excludes>
-                     <!-- <linkXRef>false</linkXRef> -->
                   </configuration>
                   <goals>
                      <goal>check</goal>
@@ -160,6 +103,7 @@
                </execution>
             </executions>
          </plugin>
+         -->
          <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>flatten-maven-plugin</artifactId>
@@ -293,6 +237,30 @@ fi
                         </argument>
                      </arguments>
                   </configuration>
+               </execution>
+            </executions>
+         </plugin>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-shade-plugin</artifactId>
+            <version>2.4.3</version>
+            <configuration>
+               <createDependencyReducedPom>false</createDependencyReducedPom>
+               <filters>
+                  <filter>
+                     <artifact>*:*</artifact>
+                     <excludes>
+                        <exclude>META-INF/*</exclude>
+                     </excludes>
+                  </filter>
+               </filters>
+            </configuration>
+            <executions>
+               <execution>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>shade</goal>
+                  </goals>
                </execution>
             </executions>
          </plugin>
