Update for next development version

--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
    </modules>
 
    <properties>
-      <revision>0.6.0</revision>
+      <revision>0.7.0-SNAPSHOT</revision>
 
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
