Script Tests and further enhancements

--- a/qqq-middleware-javalin/pom.xml
+++ b/qqq-middleware-javalin/pom.xml
@@ -49,6 +49,12 @@
          <version>${revision}</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>com.kingsrook.qqq</groupId>
+         <artifactId>qqq-language-support-javascript</artifactId>
+         <version>${revision}</version>
+         <scope>test</scope>
+      </dependency>
 
       <!-- 3rd party deps specifically for this module -->
       <dependency>
