--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ commands:
       - run:
           name: Install Java 17
           command: |
+            sudo apt-get install --reinstall ca-certificates
             sudo add-apt-repository -y ppa:openjdk-r/ppa
             sudo apt install -y openjdk-17-jdk
             sudo rm /etc/alternatives/java
