--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,7 @@ commands:
       - run:
           name: Install Java 17
           command: |
-            sudo apt-get update
-            sudo apt-get install --reinstall ca-certificates
-            sudo add-apt-repository -y ppa:openjdk-r/ppa
+            sudo -E add-apt-repository -y ppa:openjdk-r/ppa
             sudo apt install -y openjdk-17-jdk
             sudo rm /etc/alternatives/java
             sudo ln -s /usr/lib/jvm/java-17-openjdk-amd64/bin/java /etc/alternatives/java
