--- a/qqq-backend-core/pom.xml
+++ b/qqq-backend-core/pom.xml
@@ -135,6 +135,10 @@
          <artifactId>log4j-core</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.apache.logging.log4j</groupId>
+         <artifactId>log4j-layout-template-json</artifactId>
+      </dependency>
+      <dependency>
          <groupId>org.junit.jupiter</groupId>
          <artifactId>junit-jupiter-engine</artifactId>
          <scope>test</scope>
