--- a/qqq-backend-core/pom.xml
+++ b/qqq-backend-core/pom.xml
@@ -97,6 +97,23 @@
          <artifactId>java-dotenv</artifactId>
          <version>5.2.2</version>
       </dependency>
+      <dependency>
+         <groupId>org.apache.velocity</groupId>
+         <artifactId>velocity-engine-core</artifactId>
+         <version>2.3</version>
+      </dependency>
+
+      <!-- the next 2 deps are for html to pdf - per https://www.baeldung.com/java-html-to-pdf -->
+      <dependency>
+         <groupId>org.jsoup</groupId>
+         <artifactId>jsoup</artifactId>
+         <version>1.15.3</version>
+      </dependency>
+      <dependency>
+         <groupId>org.xhtmlrenderer</groupId>
+         <artifactId>flying-saucer-pdf-openpdf</artifactId>
+         <version>9.1.22</version>
+      </dependency>
 
       <!-- the next 3 deps are being added for google drive support -->
       <dependency>
