--- a/qqq-backend-core/pom.xml
+++ b/qqq-backend-core/pom.xml
@@ -167,6 +167,13 @@
          <scope>test</scope>
       </dependency>
 
+      <dependency>
+         <groupId>org.mockito</groupId>
+         <artifactId>mockito-core</artifactId>
+         <version>4.8.1</version>
+         <scope>test</scope>
+      </dependency>
+
    </dependencies>
 
    <build>
