add pvs filters (via post) to table endpoint; more test coverage, plus maybe report on untested classes in ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,11 @@ commands:
             sudo apt install -y openjdk-17-jdk
             sudo rm /etc/alternatives/java
             sudo ln -s /usr/lib/jvm/java-17-openjdk-amd64/bin/java /etc/alternatives/java
+      - run:
+          name: Install html2text
+          command: |
+            sudo apt-get update
+            sudo apt-get install -y html2text
 
   mvn_verify:
     steps:
@@ -59,6 +64,10 @@ commands:
           when: always
       - store_test_results:
           path: ~/test-results
+      - find_untested_classes:
+          name: Find Un-tested Classes
+          command: |
+            for i in */target/site/jacoco/*/index.html; do html2text -width 500 -nobs $i | sed '1,/^Total/d;' | grep -v Created | sed 's/ \+/ /g' | sed 's/ [[:digit:]]$//' | grep -v 0$ | cut -d' ' -f1; done
       - save_cache:
           paths:
             - ~/.m2
