--- a/qqq-backend-core/pom.xml
+++ b/qqq-backend-core/pom.xml
@@ -65,12 +65,17 @@
       <dependency>
          <groupId>com.fasterxml.jackson.core</groupId>
          <artifactId>jackson-databind</artifactId>
-         <version>2.14.0-rc1</version>
+         <version>2.14.0</version>
       </dependency>
       <dependency>
          <groupId>com.fasterxml.jackson.datatype</groupId>
          <artifactId>jackson-datatype-jsr310</artifactId>
-         <version>2.13.0</version>
+         <version>2.14.0</version>
+      </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.dataformat</groupId>
+         <artifactId>jackson-dataformat-yaml</artifactId>
+         <version>2.14.0</version>
       </dependency>
       <dependency>
          <groupId>org.json</groupId>
