--- a/qqq-language-support-javascript/pom.xml
+++ b/qqq-language-support-javascript/pom.xml
@@ -33,10 +33,8 @@
 
    <properties>
       <!-- props specifically to this module -->
+      <!-- none at this time -->
 
-      <!-- todo - remove these!! -->
-      <coverage.instructionCoveredRatioMinimum>0.10</coverage.instructionCoveredRatioMinimum>
-      <coverage.classCoveredRatioMinimum>0.10</coverage.classCoveredRatioMinimum>
    </properties>
 
    <dependencies>
