--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
    </modules>
 
    <properties>
-      <revision>0.15.0-SNAPSHOT</revision>
+      <revision>0.15.0</revision>
 
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
