Try turning s3 tests w/ localstack back on (w/ new orb)

--- a/qqq-backend-module-filesystem/pom.xml
+++ b/qqq-backend-module-filesystem/pom.xml
@@ -33,9 +33,7 @@
 
    <properties>
       <!-- props specifically to this module -->
-
-      <!-- temp - disable this when localstack is fixed -->
-      <coverage.haltOnFailure>false</coverage.haltOnFailure>
+      <!-- none at this time -->
    </properties>
 
    <dependencies>
