Add src/main/resources to build as well

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,10 @@
             <directory>src/main/java</directory>
             <filtering>false</filtering>
          </resource>
+         <resource>
+            <directory>src/main/resources</directory>
+            <filtering>false</filtering>
+         </resource>
       </resources>
       <plugins>
          <!-- plugins specifically for this module -->
