CE-781 Remove coverage ratios = 0 - as we might be good in here now!!

--- a/qqq-backend-module-mongodb/pom.xml
+++ b/qqq-backend-module-mongodb/pom.xml
@@ -33,10 +33,7 @@
 
    <properties>
       <!-- props specifically to this module -->
-
-      <!-- todo! -->
-      <coverage.instructionCoveredRatioMinimum>0.00</coverage.instructionCoveredRatioMinimum>
-      <coverage.classCoveredRatioMinimum>0.00</coverage.classCoveredRatioMinimum>
+      <!-- none at this time -->
    </properties>
 
    <dependencies>
