Add dep on qqq-frontend-material-dashboard - pinned back to 0.20.0-20240219.210012-18

--- a/qqq-sample-project/pom.xml
+++ b/qqq-sample-project/pom.xml
@@ -66,6 +66,11 @@
          <version>${revision}</version>
       </dependency>
       <dependency>
+         <groupId>com.kingsrook.qqq</groupId>
+         <artifactId>qqq-frontend-material-dashboard</artifactId>
+         <version>0.20.0-20240219.210012-18</version>
+      </dependency>
+      <dependency>
          <groupId>com.h2database</groupId>
          <artifactId>h2</artifactId>
          <version>2.2.220</version>
