updates to fix 'end-of-sprint-release.sh'

--- a/qqq-sample-project/pom.xml
+++ b/qqq-sample-project/pom.xml
@@ -68,7 +68,7 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-frontend-material-dashboard</artifactId>
-         <version>feature-CE-876-develop-missing-widget-types-20240221.011827-1</version>
+         <version>0.20.0-20240305.204725-27</version>
       </dependency>
       <dependency>
          <groupId>com.h2database</groupId>
