--- a/qqq-sample-project/pom.xml
+++ b/qqq-sample-project/pom.xml
@@ -68,7 +68,7 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-frontend-material-dashboard</artifactId>
-         <version>0.20.0-20240319.010143-31</version>
+         <version>${revision}</version>
       </dependency>
       <dependency>
          <groupId>com.h2database</groupId>
