--- a/qqq-backend-core/pom.xml
+++ b/qqq-backend-core/pom.xml
@@ -103,6 +103,16 @@
          <version>0.12.15</version>
       </dependency>
       <dependency>
+         <groupId>org.apache.poi</groupId>
+         <artifactId>poi</artifactId>
+         <version>5.2.5</version>
+      </dependency>
+      <dependency>
+         <groupId>org.apache.poi</groupId>
+         <artifactId>poi-ooxml</artifactId>
+         <version>5.2.5</version>
+      </dependency>
+      <dependency>
          <groupId>com.auth0</groupId>
          <artifactId>auth0</artifactId>
          <version>2.1.0</version>
