Fix to check if html2text is installed, before trying to report on un-covered classes (since that's the script we use, and we do install it in circleci)

--- a/pom.xml
+++ b/pom.xml
@@ -255,7 +255,7 @@ else
    echo "xpath is not installed.  Jacoco coverage summary will not be produced here...";
 fi
 
-which xpath > /dev/null 2>&1
+which html2text > /dev/null 2>&1
 if [ "$?" == "0" ]; then
    echo "Untested classes, per Jacoco:"
    echo "-----------------------------"
