Add qqq-bom as child module; mark qqq-bom-pom as packaging:pom

--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
    <packaging>pom</packaging>
 
    <modules>
+      <module>qqq-bom</module>
       <module>qqq-backend-core</module>
       <module>qqq-backend-module-api</module>
       <module>qqq-backend-module-filesystem</module>
