--- a/qqq-bom/pom.xml
+++ b/qqq-bom/pom.xml
@@ -24,6 +24,7 @@
    <modelVersion>4.0.0</modelVersion>
 
    <artifactId>qqq-bom-pom</artifactId>
+   <packaging>pom</packaging>
 
    <parent>
       <groupId>com.kingsrook.qqq</groupId>
