Setup branches for security and release - to work as staging workflow branches for now

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,9 +13,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "dev", "main" ]
+    branches: [ "security" ]
   pull_request:
-    branches: [ "dev", "main" ]
+    branches: [ "security" ]
   schedule:
     - cron: '31 10 * * 3'
 
