Update qqq-frontend-material-dashboard to 0.20.0 release

--- a/qqq-sample-project/pom.xml
+++ b/qqq-sample-project/pom.xml
@@ -68,7 +68,7 @@
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-frontend-material-dashboard</artifactId>
-         <version>0.20.0-20240418.180316-42</version>
+         <version>0.20.0</version>
       </dependency>
       <dependency>
          <groupId>com.h2database</groupId>
