--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,7 @@
                      <violationSeverity>warning</violationSeverity>
                      <excludes>**/target/generated-sources/*.*</excludes>
                      <!-- <linkXRef>false</linkXRef> -->
+                     <includeTestSourceDirectory>true</includeTestSourceDirectory>
                   </configuration>
                   <goals>
                      <goal>check</goal>
