--- a/qqq-bom/pom.xml
+++ b/qqq-bom/pom.xml
@@ -76,6 +76,11 @@
          </dependency>
          <dependency>
             <groupId>com.kingsrook.qqq</groupId>
+            <artifactId>qqq-openapi</artifactId>
+            <version>${revision}</version>
+         </dependency>
+         <dependency>
+            <groupId>com.kingsrook.qqq</groupId>
             <artifactId>qqq-middleware-picocli</artifactId>
             <version>${revision}</version>
          </dependency>
