--- a/qqq-middleware-javalin/pom.xml
+++ b/qqq-middleware-javalin/pom.xml
@@ -33,7 +33,10 @@
 
    <properties>
       <!-- props specifically to this module -->
-      <!-- none at this time -->
+
+      <!-- When updating to javalin 6.3.0, we received classNotFound errors - which this fixed. -->
+      <kotlin.version>1.9.10</kotlin.version>
+      <javalin.version>6.3.0</javalin.version>
    </properties>
 
    <dependencies>
@@ -43,6 +46,12 @@
          <artifactId>qqq-backend-core</artifactId>
          <version>${revision}</version>
       </dependency>
+      <dependency>
+         <groupId>com.kingsrook.qqq</groupId>
+         <artifactId>qqq-openapi</artifactId>
+         <version>${revision}</version>
+      </dependency>
+
       <dependency>
          <groupId>com.kingsrook.qqq</groupId>
          <artifactId>qqq-backend-module-rdbms</artifactId>
@@ -60,7 +69,17 @@
       <dependency>
          <groupId>io.javalin</groupId>
          <artifactId>javalin</artifactId>
-         <version>5.6.1</version>
+         <version>${javalin.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.jetbrains.kotlin</groupId>
+         <artifactId>kotlin-stdlib</artifactId>
+         <version>${kotlin.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>org.slf4j</groupId>
+         <artifactId>slf4j-simple</artifactId>
+         <version>1.7.36</version>
       </dependency>
       <dependency>
          <groupId>com.konghq</groupId>
@@ -73,11 +92,6 @@
          <artifactId>h2</artifactId>
          <version>2.2.220</version>
          <scope>test</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.slf4j</groupId>
-         <artifactId>slf4j-simple</artifactId>
-         <version>1.7.36</version>
       </dependency>
 
       <!-- Common deps for all qqq modules -->
@@ -104,5 +118,27 @@
          <scope>test</scope>
       </dependency>
    </dependencies>
+
+   <build>
+      <sourceDirectory>src/main/java</sourceDirectory>
+      <plugins>
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.10.1</version>
+            <configuration>
+               <source>11</source>
+               <target>11</target>
+               <annotationProcessorPaths>
+                  <annotationProcessorPath>
+                     <groupId>io.javalin.community.openapi</groupId>
+                     <artifactId>openapi-annotation-processor</artifactId>
+                     <version>${javalin.version}</version>
+                  </annotationProcessorPath>
+               </annotationProcessorPaths>
+            </configuration>
+         </plugin>
+      </plugins>
+   </build>
 
 </project>
