CE-1887 Increasing test coverage

--- a/qqq-middleware-javalin/pom.xml
+++ b/qqq-middleware-javalin/pom.xml
@@ -138,6 +138,17 @@
                </annotationProcessorPaths>
             </configuration>
          </plugin>
+         <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <configuration>
+               <excludes>
+                  <exclude>com/kingsrook/qqq/middleware/javalin/executors/io/*.class</exclude>
+                  <exclude>com/kingsrook/qqq/middleware/javalin/tools/codegenerators/*.class</exclude>
+                  <exclude>com/kingsrook/qqq/middleware/javalin/specs/**/*.class</exclude>
+               </excludes>
+            </configuration>
+         </plugin>
       </plugins>
    </build>
 
