CE-1887 Try to exclude full tools package

--- a/qqq-middleware-javalin/pom.xml
+++ b/qqq-middleware-javalin/pom.xml
@@ -144,7 +144,7 @@
             <configuration>
                <excludes>
                   <exclude>com/kingsrook/qqq/middleware/javalin/executors/io/*.class</exclude>
-                  <exclude>com/kingsrook/qqq/middleware/javalin/tools/codegenerators/*.class</exclude>
+                  <exclude>com/kingsrook/qqq/middleware/javalin/tools/**/*.class</exclude>
                   <exclude>com/kingsrook/qqq/middleware/javalin/specs/**/*.class</exclude>
                </excludes>
             </configuration>
